# edwards-langgraph-agent

./: .env.sample  .gitignore  README.md  langgraph.json  pyproject.toml
src/: draw_graph.py  eval_graph.py  test_agent.py
src/evaluators/llm/: bigquery_answers.py  bigquery_queries.py  rag.py  supervisor.py
src/evaluators/llm/test_cases/: bigquery_test_cases.csv  others_test_cases.csv  rag_test_cases.csv  supervisor_test_cases.csv
src/memory_graph/: configuration.py  graph.py
src/rag_agent/: config.py  document.py  errors.py  graph.py  state.py  storage_services.py  tools.py
src/rag_agent/prompts/: adaptative_rag_agent_prompt.py
src/rag_agent/vector_stores/: azure_vector_search.py  pinecone_vector_search.py  vector_search_service.py  vectorial_db.py
src/sql_agent/: bigquery_graph.py  config.py  graph.py  postgres_graph.py  sql_db.py  state.py  tools.py
src/sql_agent/prompts/: sql_agent_few_shot.py  sql_agent_prompt.py
src/supervisor/: agents_discovery.json  config.py  graph.py  state.py
src/supervisor/prompts/: clickup_supervisor_prompt.py  edwards_prompt.py  rags_supervisor_prompt.py  supervisor_prompt.py
src/transaction_agent/: config.py  graph.py  state.py
src/transaction_agent/prompts/: clickup_agent_prompt.py
